# nix-config

./: .build.yml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .hydra.json  .jobset.json  .sops.yaml  AGENTS.md  LICENSE  README.md  colors.nix  configuration.nix  default.nix  deploy.sh  flake.nix  hardware-configuration.nix  hydra.nix  irineu  nix  shell.nix  update_schemes.sh
.builds/: atlas.yml  cache-alacritty-fork.yml  cache-gtk-themes.yml  cache-packages.yml  misterio-atlas.yml  misterio-pleione.yml  pleione.yml
.direnv/: cache-pre307574.6ef4f522d63  drv
colors/: 3024.nix  atelier-estuary-light.nix  atelier-heath.nix  atelier-savanna.nix  atelier-seaside.nix  atelier-sulphurpool.nix  atlas.nix  black-metal-immortal.nix  black-metal-nile.nix  bright.nix  brushtrees-dark.nix  codeschool.nix  decaf.nix  eighties.nix  equilibrium-dark.nix  equilibrium-light.nix  fruit-soda.nix  gigavolt.nix  grayscale-dark.nix  gruvbox-material-dark-hard.nix  gruvbox-material-dark-soft.nix  gruvbox-material-light-hard.nix  gruvbox-material-light-medium.nix  gruvbox-material-light-soft.nix  humanoid-light.nix  katy.nix  lime.nix  macintosh.nix  material-darker.nix  mocha.nix  monokai.nix  nebula.nix  pico.nix  populate.sh  primer-dark-dimmed.nix  primer-light.nix  qualia.nix  railscasts.nix  sakura.nix  silk-dark.nix  (+8 more)
configs/: README.md  alacritty.yml  flavours.toml  neofetch.conf  qutebrowser.py  starship.toml  sway
home/: nixos
home-manager/: default.nix
hosts/: common.nix
lib/: default.nix
modules/: colorscheme.nix  ethminer.nix  monitors.nix  openrgb.nix  rgbdaemon.nix  wallpaper.nix
nixos/: configuration.nix  hardware-configuration.nix  home.nix
overlay/: default.nix  fix-xdpw-hyprland-crash.patch  pfetch.patch  semanticgit.patch  xdg-open-spawn-terminal.diff
overlays/: atuin-smaller-mode-indicator.diff  automatic-timezoned-async-error-handling.patch  default.nix  discocss-no-launch.patch  fish-helix-fish43-compat.patch  hydra-restrict-eval.diff  hyprbars-color-windowrules.patch  hyprbars-no-remove.patch  nix-sourcehut.patch  (+27 more)
templates/haskell/: .gitignore  default.nix  flake.nix  foo-bar.cabal  shell.nix
templates/haskell/app/: Main.hs
templates/haskell/src/: FooBar.hs
templates/python/: .editorconfig  .gitattributes  .gitignore  README.md  default.nix  flake.nix  pyproject.toml
templates/python/foo_bar/: __init__.py  __main__.py  hello.py
templates/python/tests/: example.py
(+1819 files in other folders)
