cabal-version:      2.4
name:               foo-bar
version:            0.1.0.0

synopsis:   Example Foo Bar Projeto
author:     Gabriel Fontes
maintainer: eu@misterio.me
license:    Unlicense

executable foo-bar
    main-is:          Main.hs
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
