cabal-version:      2.4
name:               foo-bar
version:            0.1.0
license:    MIT

library
    exposed-modules: FooBar
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base >= 4.15

executable foo-bar
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base >= 4.15,
        foo-bar
